--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,13 +6,6 @@
   --foreground-rgb: 255, 255, 255;
   /* --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255; */
-  --custom-oil-black: #0c0c0c;
-  --custom-obsidian: #0b1215;
-  --custom-dark-slate: #0d1717;
-  --custom-midnight-blue: #101720;
-  --custom-charcoal-gray: #171717;
-  --custom-deep-navy: #011222;
-  --custom-rich-black: #020d19;
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -22,19 +15,16 @@
     --background-end-rgb: 0, 0, 0;
   }
 } */
+html{
+  scroll-behavior: smooth;
+}
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: #f6f6f6;
   background: #F6F6F6;
 }
 
-nav {
-  background-color: var(--custom-obsidian);
-}
 
-footer {
-  background-color: var(--custom-charcoal-gray);
-}
 
 
 
